# 3-python-package-exercise-se-2pm3

./: .coverage  .pypirc  Pipfile  README.md  example.py  pyproject.toml
.github/workflows/: python-app.yml
src/pyrandom2pm/: __init__.py  __main__.py  pyrandom2pm.py  random8ball.py  randomCoin.py  randomDice.py  randomNum.py
src/pyrandom2pm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pyrandom2pm.py  test_sample.py
