[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrandom2pm"
description = "Package that returns random outputs depending on the function."
dynamic=["version"]
authors = [
  { name="Minjae Lee", email="ml6722@nyu.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "random"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Anyone",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-spring2024/3-python-package-exercise-se-2pm3"
"Repository" = "https://github.com/software-students-spring2024/3-python-package-exercise-se-2pm3.git"
"Bug Tracker" = "https://github.com/software-students-spring2024/3-python-package-exercise-se-2pm3/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  ".", "src",
]
